--- a/src/br/com/senai/view/TelaPrincipal.form
+++ b/src/br/com/senai/view/TelaPrincipal.form
@@ -27,6 +27,9 @@
                     </Property>
                     <Property name="text" type="java.lang.String" value="Texto"/>
                   </Properties>
+                  <Events>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItem1ActionPerformed"/>
+                  </Events>
                 </MenuItem>
               </SubComponents>
             </Menu>
@@ -109,7 +112,7 @@
     </Menu>
   </NonVisualComponents>
   <Properties>
-    <Property name="defaultCloseOperation" type="int" value="3"/>
+    <Property name="defaultCloseOperation" type="int" value="0"/>
     <Property name="title" type="java.lang.String" value="Tico&apos;s Pad"/>
   </Properties>
   <SyntheticProperties>
